# offerbench

./: .env.example  .gitignore  README.md  findings.md  llm_providers.json.example  pyproject.toml
offerbench/: batching.py  cli.py  config.py  currency.py  db.py  extract.py  ingest.py  leetcode_client.py  llm_client.py  models.py  schema.sql
offerbench/web/: app.py
offerbench/web/static/: style.css
offerbench/web/templates/: _offer_rows.html  base.html  offer_detail.html  offers.html
tests/: conftest.py  test_batching.py  test_currency.py  test_extract.py  test_ingest.py  test_llm_client.py
