[project]
name = "offerbench"
version = "0.1.0"
description = "Benchmark offers from different organizations"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic>=2.7",
    "click>=8.1",
    "flask>=3.0",
]

[project.scripts]
offerbench = "offerbench.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["offerbench"]
